[package]
name = "coll-nft"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "coll_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.28.0", features = ["init-if-needed"]}
ahash = "0.8.6"
anchor-spl ="0.28.0"
mpl-token-metadata = "4.1.2" 
switchboard-v2 = "0.4.0"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }

